<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Connects</string>
    <string name="tab1">All Characters</string>
    <string name="tab2">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_howto">How To</string>
    <string name="tempText">Words</string>

    <!--BUTTON LABELS-->
    <string name="search_button">Search</string>
    <string name="submit_button">Submit</string>
    <string name="add_button">Add</string>
    <string name="addbook_button">New Book</string>
    <string name="activate_button">Activate</string>
    <string name="editBooks_button">Edit My Books</string>
    <string name="edit_button">Edit</string>
    <string name="change_name">Change Name</string>
    <string name="cred_button">Set Username/Password</string>
    <string name="sync_button">Sync</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="dismiss_button">Dismiss</string>

    <!--TITLES, ETC.-->
    <string name="mybooks_title">My Books</string>
    <string name="howto_text">Suppose B is the friend of A. To connect the two,
    simple tap "Add" and type in: A @ B // friend . This will establish the character A, with a relation
        to character B. You can also type in just "A" or "A @ B" and default connections will be set.</string>

</resources>
